--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $menu_box_shadow:#e9eaeb;
 $stars_color:#ffc621;
 $comment_color:#a4b0be;
 $product_info_icons_color:#1d3553;
+$grey_text:#b0bbc7;
 
 $bg_grey_color:#f1f2f6;
 $bg_grey_color2:#f6f7f9;
