--- a/public/css/brand-view.css
+++ b/public/css/brand-view.css
@@ -483,7 +483,7 @@ h4.title {
   background: #f1f2f6;
 }
 
-.h4-title.video-blog {
+.h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet {
   padding: 0.5% 10%;
 }
 
@@ -2525,6 +2525,23 @@ img.menu-auto-icon:hover {
 
 .outter-catalog-view form.big-filter .filter-item, .outter-brand-view-body form.big-filter .filter-item {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-catalog-view form.big-filter .filter-item a, .outter-brand-view-body form.big-filter .filter-item a {
+  margin: 10px 0;
 }
 
 .outter-catalog-view form.big-filter .filter-item:nth-child(2), .outter-brand-view-body form.big-filter .filter-item:nth-child(2) {
@@ -2693,6 +2710,23 @@ img.menu-auto-icon:hover {
 .outter-catalog-view .wrapper-filtered-items nav.sort-types form.small-filter .card .card-body, .outter-brand-view-body .wrapper-filtered-items nav.sort-types form.small-filter .card .card-body {
   padding: 0;
   text-align: start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-catalog-view .wrapper-filtered-items nav.sort-types form.small-filter .card .card-body a, .outter-brand-view-body .wrapper-filtered-items nav.sort-types form.small-filter .card .card-body a {
+  margin: 10px 0;
 }
 
 .outter-catalog-view .wrapper-filtered-items nav.sort-types form.small-filter .card .card-body div, .outter-brand-view-body .wrapper-filtered-items nav.sort-types form.small-filter .card .card-body div {
