--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,6 +9,7 @@ $stars_color:#ffc621;
 $comment_color:#a4b0be;
 $product_info_icons_color:#1d3553;
 $grey_text:#b0bbc7;
+$grey_text2:#a5b1c2;
 
 $bg_grey_color:#f1f2f6;
 $bg_grey_color2:#f6f7f9;
